# astrolab

./: .gitignore  .mcp.json  AGENTS.md  AGENTS_INDEX.md  BACKLOG.md  CLAUDE.md  CURRENT_WORK.md  CYNEFIN_ASSESSMENT.md  LICENSE  README.md  REGISTRIES.md  VISION.md  package-lock.json  package.json  pyproject.toml
.agents/: AGENTS.md  INDEX.md
.claude/: settings.json
.githooks/: pre-commit
TaskLogs/: 20260614_methodology_layer_and_reindex.md  20260615_coverage_keyed_contract.md  20260618_harness_architecture.md  20260619_blind_run_findings.md  20260619_insider_info_firewall_experiment.md  20260623_mcpization_plan.md  20260623_nks_capability_audit_and_process_weave.md  20260624_composites_mcpization_feature.md  [DONE][TASK][P1]_ASTRO-027_Trump_Chart_Run_M.md  [DONE][TASK][P1]_ASTRO-028_Transit_Recipe_Dedicated_M.md  [DONE][TASK][P1]_ASTRO-029_Synastry_Invariant_CSV_M.md  [DONE][TASK][P1]_ASTRO-030_Build_Chart_Timezone_Robustness_M.md  [DONE][TASK][P2]_ASTRO-031_Swiss_Retry_Observability_M.md  [TODO][TASK][P0]_ASTRO-018_Skill_Chart_Data_Preparator_M.md  [TODO][TASK][P0]_ASTRO-020_Skill_Provider_Orchestrator_M.md  [TODO][TASK][P1]_ASTRO-017_Agent_Skills_Architecture_M.md  [TODO][TASK][P1]_ASTRO-019_Skill_Chart_Analyst_M.md  [TODO][TASK][P1]_ASTRO-021_Skill_Artifact_Builder_M.md  [TODO][TASK][P1]_ASTRO-022_Skill_Renderer_M.md  [TODO][TASK][P1]_ASTRO-023_Skill_Schema_Validator_M.md  [TODO][TASK][P1]_ASTRO-024_Skill_Run_Planner_M.md  [TODO][TASK][P1]_ASTRO-026_Skill_Obsidian_Export_M.md  [TODO][TASK][P2]_ASTRO-025_Skill_Knowledge_Ingestion_M.md  (+12 more)
artifacts/: AGENTS.md  (+1 more)
(+276 files in other folders)
