[project]
name = "catme-astrolab"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "mcp>=1.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
# Engine A (NKS astrolab #115): in-process pyswisseph backend for compute_asc_series.
# OPTIONAL on purpose — it needs a C build/wheel that is not guaranteed on Windows/3.13.
# The default engine (B1, swiss-mcp client) works without it. Install with:
#   uv sync --group engine-a   (or: uv pip install pyswisseph)
engine-a = [
    "pyswisseph>=2.10",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
